# inventory-order-management-system

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  openapi.json  pyproject.toml
backend/app/: main.py  seed.py
backend/app/ai/: agent.py  evals.py  forecasting.py  prompts.py  tools.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py
backend/app/routers/: ai.py  auth.py  catalog.py  customers.py  dashboard.py  orders.py  products.py  purchase_orders.py  stock.py
backend/app/schemas/: __init__.py
backend/app/services/: orders.py  stock.py
backend/scripts/: gen_openapi.py
backend/tests/: conftest.py  test_agent_confirm.py  test_api.py  test_eval_scoring.py  test_forecasting.py  test_orders.py  test_stock.py
docs/: API.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  endpoints.ts  schema.ts  types.ts
frontend/src/components/: AppLayout.tsx  AssistantWidget.tsx  ChatPanel.tsx  ConfirmDialog.tsx  ImportModal.tsx  Modal.tsx  ProductFormModal.tsx  StockAdjustModal.tsx  Toast.tsx  ui.tsx
frontend/src/hooks/: useAuth.tsx  useChat.ts
frontend/src/lib/: auth.ts  config.ts  format.ts
frontend/src/pages/: AssistantPage.tsx  AuditPage.tsx  CategoriesPage.tsx  CustomersPage.tsx  DashboardPage.tsx  EvalsPage.tsx  (+8 more)
